# ofono

./: .gitignore  .travis.yml  Android.mk  Makefile.am  android-configure  bootstrap  bootstrap-configure  configure.ac
btio/: btio.c
doc/: Makefile.am  manager-api.xml  modem-api.xml  ofono-docs.xml  org.ofono.AssistedSatelliteNavigation.xml  org.ofono.AudioSettings.xml  org.ofono.CallBarring.xml  org.ofono.CallForwarding.xml  org.ofono.CallMeter.xml  org.ofono.CallSettings.xml  org.ofono.CallVolume.xml  org.ofono.CellBroadcast.xml  org.ofono.ConnectionContext.xml  org.ofono.ConnectionManager.xml  org.ofono.Handsfree.xml  org.ofono.HandsfreeAudioAgent.xml  org.ofono.HandsfreeAudioCard.xml  org.ofono.HandsfreeAudioManager.xml  org.ofono.LocationReporting.xml  org.ofono.Manager.xml  org.ofono.Message.xml  org.ofono.MessageManager.xml  org.ofono.MessageWaiting.xml  org.ofono.Modem.xml  org.ofono.NetworkOperator.xml  org.ofono.NetworkRegistration.xml  org.ofono.Phonebook.xml  org.ofono.PositioningRequestAgent.xml  org.ofono.PushNotification.xml  org.ofono.PushNotificationAgent.xml  org.ofono.RadioSettings.xml  org.ofono.SimManager.xml  org.ofono.SimToolkit.xml  org.ofono.SimToolkitAgent.xml  org.ofono.Siri.xml  org.ofono.SmartMessaging.xml  org.ofono.SmartMessagingAgent.xml  org.ofono.SupplementaryServices.xml  org.ofono.TextTelephony.xml  org.ofono.VoiceCall.xml  (+7 more)
drivers/atmodem/: atmodem.c  atutil.c  call-barring.c  call-forwarding.c  call-meter.c  call-settings.c  call-volume.c  cbs.c  devinfo.c  gnss.c  gprs-context.c  gprs.c  network-registration.c  phonebook.c  sim-auth.c  sim.c  sms.c  stk.c  ussd.c  voicecall.c
drivers/calypsomodem/: calypsomodem.c  stk.c  voicecall.c
drivers/cdmamodem/: cdmamodem.c  connman.c  devinfo.c  voicecall.c
drivers/dunmodem/: dunmodem.c  gprs.c  network-registration.c
drivers/hfpmodem/: call-volume.c  devinfo.c  handsfree.c  hfpmodem.c  network-registration.c  siri.c  slc.c  voicecall.c
drivers/hsomodem/: gprs-context.c  hsomodem.c  radio-settings.c
drivers/huaweimodem/: audio-settings.c  cdma-netreg.c  gprs-context.c  huaweimodem.c  radio-settings.c  ussd.c  voicecall.c
drivers/iceramodem/: gprs-context.c  iceramodem.c  radio-settings.c
drivers/ifxmodem/: audio-settings.c  ctm.c  gprs-context.c  ifxmodem.c  radio-settings.c  stk.c  voicecall.c
drivers/isimodem/: audio-settings.c  call-barring.c  call-forwarding.c  call-meter.c  call-settings.c  cbs.c  devinfo.c  gprs-context.c  gprs.c  network-registration.c  radio-settings.c  sim.c  sms.c  uicc.c  ussd.c  voicecall.c
drivers/mbmmodem/: gprs-context.c  location-reporting.c  mbmmodem.c  stk.c
drivers/nwmodem/: nwmodem.c  radio-settings.c
drivers/qmimodem/: location-reporting.c  qmi.c
drivers/rilmodem/: call-barring.c  call-forwarding.c  call-settings.c  call-volume.c  devinfo.c  gprs-context.c  gprs.c  network-registration.c  phonebook.c  radio-settings.c  rilmodem.c  rilutil.c  sim.c  sms.c  ussd.c  voicecall.c
drivers/speedupmodem/: speedupmodem.c  ussd.c
drivers/stemodem/: caif_rtnl.c  caif_socket.h  gprs-context.c  if_caif.h  radio-settings.c  stemodem.c  voicecall.c
drivers/swmodem/: gprs-context.c  swmodem.c
drivers/telitmodem/: location-reporting.c  telitmodem.c
drivers/ztemodem/: radio-settings.c  ztemodem.c
dundee/: bluez5.c  dbus.c  device.c  main.c  manager.c
gatchat/: gatchat.c  gatchat.h  gatmux.h  gatppp.c  gatrawip.c  gatresult.c  gatserver.c  gatserver.h  gattty.c  gsmdial.c  ppp_auth.c  ppp_cp.c  ppp_ipcp.c  ppp_ipv6cp.c  ppp_lcp.c  ppp_net.c  test-qcdm.c  test-server.c
gdbus/: mainloop.c
gril/: gril.c  grilio.c  grilreply.c  grilreply.h  grilunsol.c  grilunsol.h  grilutil.c  grilutil.h  ril_constants.h
include/: log.h
plugins/: alcatel.c  bluez4.c  calypso.c  cinterion.c  connman.c  dun_gw_bluez4.c  dun_gw_bluez5.c  emulator_fuzz.c  g1.c  he910.c  hfp_ag_bluez4.c  hfp_ag_bluez5.c  hfp_hf_bluez4.c  hfp_hf_bluez5.c  hso.c  huawei.c  icera.c  ifx.c  linktop.c  mbm.c  nokia.c  nokiacdma.c  novatel.c  palmpre.c  phonesim.c  push-notification.c  quectel.c  samsung.c  sap.c  sierra.c  sim900.c  smart-messaging.c  speedup.c  speedupcdma.c  ste.c  stemgr.c  stktest.c  telit.c  ublox.c  upower.c  (+2 more)
src/: audio-settings.c  call-barring.c  call-forwarding.c  call-meter.c  call-settings.c  call-volume.c  cbs.c  cdma-connman.c  cdma-netreg.c  cdma-sms.c  cdma-smsutil.c  cdma-voicecall.c  common.c  ctm.c  dbus.c  emulator.c  gnss.c  gnssagent.c  gprs.c  handsfree-audio.c  handsfree.c  idmap.c  location-reporting.c  log.c  main.c  manager.c  message-waiting.c  message.c  modem.c  network.c  phonebook.c  plugin.c  radio-settings.c  sim-auth.c  sim.c  simfs.c  simutil.c  siri.c  sms.c  smsagent.c  (+6 more)
test/: list-contexts
tools/: auto-enable.c  get-location.c  huawei-audio.c  stktest.c  tty-redirector.c
unit/: rilmodem-test-server.c  test-caif.c  test-mux.c  test-rilmodem-cb.c  test-rilmodem-cs.c  test-rilmodem-sms.c  test-stkutil.c
